# ani-cli

./: ..gitignore.un~  .gitignore  .gitignore~  README.md  main.py  pyproject.toml  tempCodeRunnerFile.py
ani_cli/: __main__.py
